# agi-mvp-general

./: .gitignore  CELL_RULES_SUMMARY.txt  DESIGN_NOTES.md  INSTALL.md  README.md  benchmark.py  four_pillars_research_plan.md  pyproject.toml  requirements.txt  run_subset.py  run_tests.py
arc_agent/: __init__.py  cell_rules.py  cell_synth.py  concepts.py  cpu_utils.py  culture.py  dataset.py  decompose.py  dsl.py  dsl_synth.py  evaluate.py  explorer.py  main.py  object_decompose.py  objects.py  persistence.py  primitives.py  sample_tasks.py  scene.py  scorer.py  solver.py  synthesizer.py
docs/: ARCHITECTURE.md  CELL_RULES.md  CELL_RULES_IMPLEMENTATION.md  CELL_SYNTHESIS.md  COMPUTE_CAP.md  DECOMPOSITION_IMPROVEMENTS.md  DESIGN_NOTES.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_RESULTS.md  PROMPT_LOG.md  RESEARCH_PLAN.md
scripts/: analyze_failures.py  analyze_object_rules.py  debug_recolor.py  inspect_task.py  quick_bench.py  validate_dsl_contribution.py  validate_dsl_net_new.py  validate_dsl_only.py  validate_dsl_unique.py  validate_metrics.py  validate_subset.py
tests/: test_cell_rules.py  test_cell_synth.py  test_compute_budget.py  test_concepts.py  test_conditionals.py  test_culture.py  test_dataset.py  test_decompose.py  test_dsl.py  test_explorer.py  test_inpainting.py  test_integration.py  test_line_projection.py  test_multi_candidate.py  test_object_decompose.py  test_objects.py  test_param_search.py  test_performance.py  test_persistence.py  test_primitives.py  test_scene.py  test_scorer.py  test_solver_selection.py  test_spatial.py  (+1 more)
(+2 files in other folders)
